Mobile format fixes -- textInput width and y-overflow of form.

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -62,7 +62,7 @@
 
 @media screen and (max-width: 768px) {
   #footer{
-    height: 20%;
+    height: 12.5%;
   }
 
   #saveForLaterText{
