--- a/src/pages/QuoteForm.module.css
+++ b/src/pages/QuoteForm.module.css
@@ -3,6 +3,8 @@
     margin-left: 80px;
     background-color: #fff;
     transition: 0.25s all ease-in-out;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .formPage h1{
@@ -102,7 +104,7 @@ input[type=number]{
     }
 
     .textInput{
-        width: 90%;
+        width: 80%;
     }
 
     .policyCard{
